--- a/cartoonretro/pom.xml
+++ b/cartoonretro/pom.xml
@@ -35,6 +35,16 @@
         <artifactId>slf4j-api</artifactId>
         <version>1.7.32</version> <!-- Asegúrate de usar la última versión disponible -->
     </dependency>
+	<dependency>
+	    <groupId>com.github.twitch4j</groupId>
+	    <artifactId>twitch4j</artifactId>
+	    <version>1.16.0</version>
+	</dependency>
+    <dependency>
+        <groupId>uk.co.caprica</groupId>
+        <artifactId>vlcj</artifactId>
+        <version>4.8.2</version> <!-- Replace with the latest version available -->
+    </dependency>
   </dependencies>
 
   <build>
