--- a/cartoonretro/pom.xml
+++ b/cartoonretro/pom.xml
@@ -45,6 +45,11 @@
         <artifactId>vlcj</artifactId>
         <version>4.8.2</version> <!-- Replace with the latest version available -->
     </dependency>
+    <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.36.0.3</version> <!-- Use the latest version -->
+    </dependency>
   </dependencies>
 
   <build>
