--- a/cartoonretro/pom.xml
+++ b/cartoonretro/pom.xml
@@ -30,11 +30,16 @@
 	  <artifactId>client</artifactId>
 	  <version>2.0.0</version>
 	</dependency>
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.7.32</version> <!-- Asegúrate de usar la última versión disponible -->
-    </dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>2.0.9</version>
+</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>2.0.9</version>
+</dependency>
 	<dependency>
 	    <groupId>com.github.twitch4j</groupId>
 	    <artifactId>twitch4j</artifactId>
