--- a/cartoonretro/pom.xml
+++ b/cartoonretro/pom.xml
@@ -30,16 +30,16 @@
 	  <artifactId>client</artifactId>
 	  <version>2.0.0</version>
 	</dependency>
-<dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-api</artifactId>
-    <version>2.0.9</version>
-</dependency>
-<dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-simple</artifactId>
-    <version>2.0.9</version>
-</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>2.0.9</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>2.0.9</version>
+	</dependency>
 	<dependency>
 	    <groupId>com.github.twitch4j</groupId>
 	    <artifactId>twitch4j</artifactId>
@@ -55,6 +55,17 @@
         <artifactId>sqlite-jdbc</artifactId>
         <version>3.36.0.3</version> <!-- Use the latest version -->
     </dependency>
+    <!-- Apache HttpClient for HTTP requests -->
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.14</version> <!-- Use the latest version available -->
+    </dependency>
+    <dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20230618</version>
+	</dependency>
   </dependencies>
 
   <build>
