--- a/cartoonretro/pom.xml
+++ b/cartoonretro/pom.xml
@@ -30,16 +30,16 @@
 	  <artifactId>client</artifactId>
 	  <version>2.0.0</version>
 	</dependency>
-	<dependency>
+	<!--<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-api</artifactId>
 	    <version>2.0.9</version>
-	</dependency>
-	<dependency>
+	</dependency>-->
+	<!--<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-simple</artifactId>
 	    <version>2.0.9</version>
-	</dependency>
+	</dependency>-->
 	<dependency>
 	    <groupId>com.github.twitch4j</groupId>
 	    <artifactId>twitch4j</artifactId>
@@ -67,12 +67,19 @@
 	    <version>20230618</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+    <!--<dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.3.5</version>
+    </dependency>-->
+	
+	<!-- https://mvnrepository.com/artifact/com.github.twitch4j/twitch4j-chat -->
 	<dependency>
-	    <groupId>ch.qos.logback</groupId>
-	    <artifactId>logback-classic</artifactId>
-	    <version>1.4.11</version>
-	    <scope>test</scope>
+	    <groupId>com.github.twitch4j</groupId>
+	    <artifactId>twitch4j-chat</artifactId>
+	    <version>1.17.0</version>
 	</dependency>
+
 
   </dependencies>
 
