Some unimportant changes: - FromFilesToDB.java: Fix times and make them also show in the log. - Modified gitignore to ignore files that should be ignored (yes I should go see a doctor) - InputOutput.java: Improve dates handling
The rest of the changes I did was the last year and I don't have any idea of what I did. Next time I should upload the changes shortly after doing them.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ SeriesAndEpisodesListRoute.txt
 obtainOauth.txt
 
 twitchCredentials
+cartoonretro/Schedule.txt
+cartoonretro/SeriesAndEpisodesListDB.txt
+cartoonretro/SeriesAndEpisodesListRoute
+cartoonretro/TODO list
+cartoonretro/videodata.db
+cartoonretro/videodata.sqbpro
