Just rename some folders

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ obtainOauth.txt
 twitchCredentials
 cartoonretro/Schedule.txt
 cartoonretro/SeriesAndEpisodesListDB.txt
-cartoonretro/SeriesAndEpisodesListRoute
-cartoonretro/TODO list
+cartoonretro/SeriesAndEpisodesListRoute.txt
+cartoonretro/"TODO list.txt"
 cartoonretro/videodata.db
 cartoonretro/videodata.sqbpro
